lab1/Test/L1-A-12-14.output
Error Type A at Line 3
Error Type B at Line 10
Error Type A at Line 13
Error Type B at Line 16
Error Type A at Line 44
Error Type B at Line 54
